--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
                             <h1 class="gradient-t green fadeInUp" data-wow-delay="0.2s">
                                 This is BOB</h1>
-                            <p class="w-text fadeInUp" data-wow-delay="0.3s">BOB wants to build on ETH. build with BOB.
-                                be great and make erc great again.</p>
+                            <p class="w-text fadeInUp" data-wow-delay="0.3s">BOB wants to build on base. build with BOB.
+                                be great and make base great again.</p>
                             <div class="d-inline-block">
                                 <div class="contract-add contract-border align-items-center">
                                     <i class="fa fa-copy"></i>
@@ -227,9 +227,7 @@
                             <span class="gradient-text">ABOUT</span>
                         </div>
                         <h4 class="fadeInUp" data-wow-delay="0.3s">BOB</h4>
-                        <p class="fadeInUp" data-wow-delay="0.4s">Meme created by Binance in an interaction with the
-                            Binance intern. they asked the community to name their mascot and confirmed the name as BOB.
-                            his instructions were to make bsc great again.</p>
+                        <p class="fadeInUp" data-wow-delay="0.4s">Born on Base and built for greatness, BOB is no ordinary guy. Legend has it that he emerged from a mysterious blockchain glitch, bringing with him the ultimate plan. To unite builders, dreamers, and degens under one roof.</p>
                         <p class="fadeInUp" data-wow-delay="0.5s"> his instructions were to make crypto great again.</p>
                         <a class="btn copy-btn v2 mt-15 fadeInUp" data-wow-delay="0.6s" href="buylink"> Buy $BOB</a>
                     </div>
